# tafhub-ai-scrapper

./: .gitignore  Cargo.toml  README.md  debug_response_www.jumia.com.ng.html  env.example  rust-toolchain.toml  schema.sql  scraped_data.json  scraper_test_output.json  setup_db.sh  test_db.sh
migrations/: 20250210_add_google_auth.sql  20250211_add_otp_verification.sql  20250211_add_user_name.sql  20250212_add_payments.sql  20250213_add_admin_support.sql
src/: auth.rs  database.rs  email.rs  main.rs  ratelimit.rs  scraper.rs
