[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Scraping dependencies
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
url = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for job tracking
uuid = { version = "1.0", features = ["v4", "serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"
headers = "0.4"
sha2 = "0.10"
hex = "0.4"

# Email service
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
rand = "0.8"

# API Documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
dotenvy = "0.15"
once_cell = "1.19"
